fix alignment

--- a/src/styles/SwapLiquidity.module.sass
+++ b/src/styles/SwapLiquidity.module.sass
@@ -10,7 +10,7 @@
   flex-direction: column
   justify-content: center
   align-items: center
-  padding-top: 360px
+  min-height: calc(100vh - 64px)
 
 .chart
   margin-top: 24px
